# tredence-task

./: .gitignore  DESIGN.md  README.md  conftest.py  pyproject.toml  requirements.txt
docs/: pruning_loop.mmd
engine/: __init__.py  gradcheck.py  losses.py  tensor.py
nn/: __init__.py  init.py  layers.py  optim.py  parameter.py
prune/: __init__.py  importance.py  pruner.py  regrow.py  schedule.py
results/: part2_learning_curve.json  part3_pruning.json  part4_pareto.json
tests/: grad_helpers.py  test_activations.py  test_adam.py  test_backward.py  test_cost.py  test_elementwise.py  test_gradcheck.py  test_init.py  test_layers.py  test_masked_weight.py  test_matmul_reductions.py  test_prune.py  test_pruned_training.py  test_regrow.py  test_scripts.py  test_sgd.py  test_smoke.py  test_softmax_ce.py  test_sweep.py  test_tensor.py  test_training.py
train/: __init__.py  cost.py  data.py  loop.py  model.py  pareto_run.py  prune_loop.py  prune_run.py  sweep.py  train_mlp.py
utils/: __init__.py  seed.py
