[project]
name = "aqua-self-pruning"
version = "0.1.0"
description = "A from-scratch NumPy autodiff engine and a neural net that prunes its own connections while training."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
]

# Treat this repo as an app, not an installable package: uv just provisions the
# environment and we run scripts straight from the repo root.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
